2_phaseII/6_enterprise_gateway/ingress-eg-prod.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: enterprise-gateway
  name: egw-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  - hosts:
    - egw.jupyteronline.com
    secretName: nginx-egw-prod-secret
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: egw.jupyteronline.com
      http:
        paths:
          - path: /
            backend:
              serviceName: enterprise-gateway
              servicePort: 8888
